Robert/308 mapstruct spike (#138)
[308]: Investigatory spike for Orika dependency replacement and [309]: Replacement of Orika dependency with MapStruct

* [308]: Add MapStruct dependency

* [308]: Initial implementation of new mapping methods, primarily for SegueUser and UserSummary mappings, including default (manual) implementation for ContentSummaryDTO <-> String mapping and delegation function to handle variable target classes

* [308]: Splitting mapper interface into several more specialised interfaces for organisational purposes

* [309]: Replacement of Orika invocations with new mapper instances and methods in EventsFacade, PagesFacade, ContentSummarizerService, GameManager, UserAccountManager, GameboardPersistenceManager, QuestionManager, PgAssignmentPersistenceManager, PgQuizAssignmentPersistenceManager, PgQuizAttemptPersistenceManager, GroupManager, QuizQuestionManager, GitContentManager

* [309]: Rename some variables to match the new mapping interfaces

* [309]: Apply annotations and explicit methods where necessary to ensure subclasses and nested objects are properly handled

* [309]: Introduce UnimplementedMappingException to use when unexpected classes are passed to the mapping delegator methods

* [309]: Implement unit tests for new mapping implementations

* [309]: Implement new deepEquals custom test assertion to compare complex objects using json representations

* [309]: Clean up Orika support classes and methods that are no longer needed, remove Orika dependency

* [309]: Removed Role argument from UserFromAuthProvider, as it had no such property and the argument was unused

* [309]: Some minor cleanup based on SonarLint recommendations

---------

Co-authored-by: sxpydo <shavypeynado@gmail.com>